force-app/shared/config/objects/TriggerSwitch__c/fields/AccountTrigger__c.field-meta.xml
<CustomField>
    <fullName>AccountTrigger__c</fullName>
    <defaultValue>true</defaultValue>
    <label>AccountTrigger</label>
    <type>Checkbox</type>
</CustomField>