force-app/shared/config/objects/TriggerSwitch__c/fields/CaseTrigger__c.field-meta.xml
<CustomField>
    <fullName>CaseTrigger__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Enables trigger on Case object</description>
    <label>CaseTrigger</label>
    <type>Checkbox</type>
</CustomField>