force-app/shared/config/objects/TriggerSwitch__c/fields/LiveChatTranscriptEventTrigger__c.field-meta.xml
<CustomField>
    <fullName>LiveChatTranscriptEventTrigger__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Enables trigger on LiveChatTranscriptEvent object</description>
    <label>LiveChatTranscriptEventTrigger</label>
    <type>Checkbox</type>
</CustomField>