force-app/shared/config/objects/TriggerSwitch__c/fields/LiveChatTranscriptTrigger__c.field-meta.xml
<CustomField>
    <fullName>LiveChatTranscriptTrigger__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Enables trigger on LiveChatTranscript object</description>
    <label>LiveChatTranscriptTrigger</label>
    <type>Checkbox</type>
</CustomField>